@@ -1,5 +1,6 @@
 -- ?? --
 * OneInstanceAtOnce - guard class that ensures that only one instance of a given object is present at a given time in system.
+* ignore<>() - helper that prevents warnings about unused variable (ex.: that is needed only in debug).
 
 -- v0.6.0 --
 * fixed remarks on intel's toolchain.
